# luigipipes-rs

./: Cargo.toml  README.md
src/: filter.rs  lib.rs  pipeline.rs  sink.rs  source.rs
